[tool.poetry]
name = "hyperfocus"
version = "1.0.0-beta.0"
description = "Minimalist daily task manager."
authors = ["u8slvn <u8slvn@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/u8slvn/hyperfocus"
homepage = "https://github.com/u8slvn/hyperfocus"
keywords = [
    "cli",
    "todo",
    "todolist",
    "todo-list",
    "task-list",
    "productivity",
]
include = [
    "LICENSE",
    "CHANGELOG.md",
    "README.md",
]

[tool.poetry.urls]
"Changelog" = "https://github.com/u8slvn/hyperfocus/blob/main/CHANGELOG.md"

[tool.poetry.dependencies]
python = "^3.8"
peewee = "^3.17.0"
click = "^8.1.3"
pyperclip = "^1.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1"
mypy = ">=0.961"
freezegun = "^1.2.1"
pre-commit = "^2.6"
pytest-mock = "^3.8"
pytest-cov = "^3.0.0"
tox = "^3.25.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"

[tool.poetry.scripts]
hyf = "hyperfocus.console.cli:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 88

[tool.ruff]
fix = true
line-length = 88
extend-select = [
    "I",   # isort
    "N",   # pep8-naming
]

[tool.ruff.isort]
force-single-line = true
lines-between-types = 1
lines-after-imports = 2
required-imports = [
    "from __future__ import annotations",
]

[tool.mypy]
files = "hyperfocus/"
mypy_path = "hyperfocus/"
namespace_packages = true
show_error_codes = true
ignore_missing_imports = true
strict = true

[[tool.mypy.overrides]]
module=["peewee", "pyperclip"]
warn_unused_ignores = false
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = [
    "functional: marks as functional tests (deselect with '-m \"not functional\"')",
]
testpaths = ["tests"]
addopts = [
    "--cov=hyperfocus/",
    "--import-mode=importlib",
]
